<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming_black_24dp"
        android:title="@string/event_upcoming"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_finished_black_24dp"
        android:title="@string/event_finished"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/title_favorite"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_settings"
        android:iconTint="@color/black"/>

</menu>