<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.syahna.appdicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_finished"
            app:destination="@id/navigation_finished" />
    </fragment>

    <!-- Upcoming Fragment -->
    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.syahna.appdicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <!-- Finished Fragment -->
    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.syahna.appdicodingevent.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <!-- Favorite Fragment -->
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.syahna.appdicodingevent.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <!-- Settings Fragment -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.syahna.appdicodingevent.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Detail Fragment -->
    <activity
        android:id="@+id/navigation_detail"
        android:name="com.syahna.appdicodingevent.detail.DetailActivity"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_finished" />
</navigation>