<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_imagelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/event_owner"
            android:text="@string/event_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/event_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="4dp"
            android:textSize="16sp"
            android:text="@string/event_category"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintBottom_toBottomOf="@id/event_summary"
            app:layout_constraintEnd_toStartOf="@+id/event_city"
            app:layout_constraintTop_toBottomOf="@+id/event_owner"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/event_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="20dp"
            android:paddingVertical="4dp"
            android:text="@string/event_city"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/event_category"
            app:layout_constraintTop_toBottomOf="@id/event_owner"
            app:layout_constraintTop_toTopOf="@+id/event_category" />

        <TextView
            android:id="@+id/event_beginTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="4dp"
            android:text="@string/begin_time"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_watch_later_24"
            android:drawablePadding="4dp"
            app:layout_constraintBottom_toTopOf="@+id/event_quota"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/event_category" />

        <TextView
            android:id="@+id/event_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="4dp"
            android:drawablePadding="4dp"
            android:text="@string/event_quota"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_groups_24"
            app:layout_constraintBottom_toTopOf="@+id/event_summary"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/event_beginTime" />

        <TextView
            android:id="@+id/event_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="14dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/event_summary"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/event_quota" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="14dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_summary" />

        <Button
            android:id="@+id/linkButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_description" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/title_favorite"
            android:src="@drawable/ic_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:tint="@color/red" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>